# tumorevo

./: .gitignore  LICENSE  README.md  cell.py  deme.py  pyproject.toml  tumor.py  tumorevo.py
.github/workflows/: main.yaml
notebooks/: Untitled.ipynb  data_overview.ipynb  dna_mhn.ipynb  real_data_comparison.ipynb  scrna_batch_effects.ipynb  visium_niches.ipynb
src/tumorevo/: __init__.py  constants.py
src/tumorevo/tumorfig/: draw.py  util.py
src/tumorevo/tumorsample/: main.py
src/tumorevo/tumorsample/assays/: __init__.py  assay.py  dna.py  rna.py  visium.py
src/tumorevo/tumorsample/assays/assayconfigs/: bdna.yaml  scdna.yaml  scrna.yaml  visium.yaml
src/tumorevo/tumorsample/biopsy/: sample.py
src/tumorevo/tumorsample/biopsy/biopsyconfigs/: biopsy.yaml
src/tumorevo/tumorsim/: cell.py  deme.py  main.py  modes.py  phenotype.py  selection.py  tumor.py
src/tumorevo/tumorsim/simconfigs/: dcis.yaml
src/tumorevo/tumortrt/: main.py
tests/: test_integration.py
tumorevo/: __init__.py  cell.py  deme.py  main.py  modes.py  util.py
tumorevo/tumorfig/: animate.py  draw.py  main.py  util.py
tumorevo/tumorsim/: cell.py  deme.py  main.py  modes.py  tumor.py
tumorfig/: main.py  plotter.py  util.py
