[tool.poetry]
name = "tumorevo"
version = "0.0.1"
description = "Simulate and illustrate tumor evolution under different spatial constraints."
license = "MIT"
authors = ["pedrofale <pedro.miguel.ferreira.pf@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pedrofale/tumorevo"

[tool.poetry.dependencies]
python = ">=3.7.1"
pandas = "^1.3.2"
numpy = "^1.21.2"
pymuller = "^0.1.2"
click = "^8.0.1"
packcircles = "^0.14"
networkx = "^3.1"
pygraphviz = "^1.11"
tqdm = "^4.57.0"
celluloid = ">=0.2.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^23.7.0"
pytest = "^6.2.4"

[tool.poetry.scripts]
tumorsim = "tumorevo.tumorsim:main"
tumorfig = "tumorevo.tumorfig.draw:main"
tumorgif = "tumorevo.tumorfig.animate:main"
